--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiagent Admin</title>
+    <title>OpenCoordex Admin</title>
 
     <!-- Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
                 <div class="logo">
                     <i class="fa-solid fa-robot logo-icon"></i>
                     <div class="logo-text">
-                        <h2>Multiagent</h2>
+                        <h2>OpenCoordex</h2>
                         <span class="badge-version">v1.0.4</span>
                     </div>
                 </div>
@@ -351,7 +351,7 @@
                             <div class="form-row">
                                 <div class="form-group">
                                     <label for="s3-bucket">Bucket Name *</label>
-                                    <input type="text" id="s3-bucket" required placeholder="my-multiagent-bucket">
+                                    <input type="text" id="s3-bucket" required placeholder="my-opencoordex-bucket">
                                 </div>
                                 <div class="form-group">
                                     <label for="s3-region">Region</label>
